k8s/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
name: miniapp-svc
namespace: default
spec:
selector:
app: miniapp
ports:
- port: 80
targetPort: 8000
type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: miniapp-ingress
namespace: default
annotations:
kubernetes.io/ingress.class: nginx
spec:
rules:
- host: your-domain.com
http:
paths:
- path: /
pathType: Prefix
backend:
service:
name: miniapp-svc
port:
number: 80
